# textract

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build_all.sh  flake.nix  main.cc  readme.md  sample.cc  textract.h
.metals/: metals.lock.db  metals.mv.db
benchmarks/: cache_benchmark.cc
docs/: ASan.md  CMakeLists.txt  linux.md  tesseract.md
docs/build_cmake/: release.md
docs/cmake_vars/: cmake_consts.md
docs/codegen/: codegen_comptime.md
docs/debug/: lldb.md
docs/dependencies/: findopensslfunc.sh  latest.md
docs/headers/: including.md
docs/staticlib/: lib.md
include/: cli.h  constants.h  conversion.h  crypto.h  fs.h  ktesseract.h  logger.h  textract.h  util.h
scripts/: CMakeLists.txt  install_deps.sh  linux.md
src/: conversion.cc  fs.cc  fs.h  schema.capnp  serializer.cc  tesseract.cc  tesseract.h  util.h
tests/: atomic_test.cc  bulk_test.cc  const_tests.cc  debug_test.cc  fs_test.cc  imgclass_test.cc  ocr_test.cc  pdf_test.cc  similarity_test.cc  sin_test.cc  tesseractparallel_test.cc  textractapi_tests.cc  threadlocal_test.cc
textract/: textract  textract.h
